<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#FFE9DA">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculateYour"
        android:textSize="30sp"
        android:textColor="#BB5656"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="30sp"
        android:background="#D82BD9E8"
        android:textColor="#BB5656"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:padding="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inMinutes"
        android:textSize="30sp"
        android:textColor="#BB5656"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/selectDateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectDate"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="#80000000"
        android:layout_margin="16dp"
        android:backgroundTint="#FFFFFF"/>
    <TextView
        android:id="@+id/selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#BB5656"

        android:layout_gravity="center"
        android:layout_marginTop="6dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectedDate"
        android:textSize="20sp"

        android:textColor="#62242222"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
     />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calculatedAge"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#BB5656"
        android:paddingRight="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        tools:text="@string/minutes"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inMinutesTillDate"
        android:textSize="20sp"

        android:textColor="#62242222"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="6dp" />





</LinearLayout>